--- a/PCStudioApp.json
+++ b/PCStudioApp.json
@@ -9825,6 +9825,7 @@
     "FFlagMacEvenBetterTrackpadScrolling": true,
     "FIntAvatarAutosetupPollingTimeoutSeconds": 1800,
     "DFIntRobloxTelemetryThrottlingTTMQMilestone0Mesh_Staged": "1000;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T21:23:23",
+    "DFIntSDLGameControllerAxisDriftDeadZoneHundredth_Staged": "10;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T21:27:29",
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -11174,8 +11175,8 @@
     "FFlagScriptSyncM2_5BetaFeature": true,
     "FFlagLuaStartPagePlaceOpenAttributionTelemetry": true,
     "FFlagCacheReadParsePolicy": true,
-    "FStringFlagRepoGitHashFastString": "7a189731178bb3c09d042bb09f281d12d5aafd6b",
-    "DFStringFlagRepoGitHashDynamicString": "7a189731178bb3c09d042bb09f281d12d5aafd6b",
-    "FStringFlipTimeStampFastString": "2025-01-27T21:25:59.549Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-27T21:25:59.549Z"
+    "FStringFlagRepoGitHashFastString": "1126be499d70c0e5af499cda8cb200fd21801b5b",
+    "DFStringFlagRepoGitHashDynamicString": "1126be499d70c0e5af499cda8cb200fd21801b5b",
+    "FStringFlipTimeStampFastString": "2025-01-27T21:28:01.261Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-27T21:28:01.261Z"
 }
